src/test/data/tests/chapter_17/invalid_types/extra_credit/compound_add_void_pointer.c
// Can't perform +=/-= with void lvalue
void f(void){
    return;
}

int main(void) {
    f() += 3;
    return 0;
}
